--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -2,3 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-family: "Nunito", sans-serif;
+    @apply xs:text-[16px] text-[15px];
+}
+
+.wrapper {
+    @apply w-full max-w-[1200px] mx-auto px-4;
+}
+
+.img-cover {
+    @apply object-cover w-full h-full overflow-hidden;
+}
