--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -1,20 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    @apply xs:text-[16px] text-[13px] font-roboto;
+  @apply xs:text-[16px] text-[13px] font-roboto;
 }
 
 .wrapper {
-    @apply w-full max-w-[1200px] mx-auto px-4;
+  @apply w-full max-w-[1200px] mx-auto px-4;
 }
 
 .img-cover {
-    @apply object-cover w-full h-full overflow-hidden;
+  @apply object-cover w-full h-full overflow-hidden;
+}
+::-webkit-scrollbar {
+  @apply w-3; 
+}
+::-webkit-scrollbar-track {
+  @apply rounded-lg bg-gray-100;
+}
+::-webkit-scrollbar-thumb {
+  @apply rounded-lg bg-gray-300;
 }
