--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -641,14 +641,6 @@ video {
   margin-inline-end: 0.5rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
 .mr-3 {
   margin-right: 0.75rem;
 }
@@ -691,6 +683,13 @@ video {
 
 .mt-\[32px\] {
   margin-top: 32px;
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 
 .block {
@@ -751,10 +750,6 @@ video {
   height: 2rem;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
 .h-\[38px\] {
   height: 38px;
 }
@@ -790,6 +785,14 @@ video {
 
 .max-h-\[530px\] {
   max-height: 530px;
+}
+
+.max-h-\[700px\] {
+  max-height: 700px;
+}
+
+.max-h-\[800px\] {
+  max-height: 800px;
 }
 
 .min-h-\[530px\] {
@@ -836,10 +839,6 @@ video {
   width: 20rem;
 }
 
-.w-9 {
-  width: 2.25rem;
-}
-
 .w-96 {
   width: 24rem;
 }
@@ -878,6 +877,10 @@ video {
 
 .max-w-\[1200px\] {
   max-width: 1200px;
+}
+
+.max-w-\[185px\] {
+  max-width: 185px;
 }
 
 .max-w-full {
@@ -975,10 +978,6 @@ video {
 
 .gap-2\.5 {
   gap: 0.625rem;
-}
-
-.gap-3 {
-  gap: 0.75rem;
 }
 
 .gap-\[18px\] {
@@ -1088,11 +1087,6 @@ video {
   background-color: rgb(201 230 246 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#F24E1E\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 78 30 / var(--tw-bg-opacity));
-}
-
 .bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
@@ -1111,11 +1105,6 @@ video {
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .bg-gray-50 {
@@ -1231,11 +1220,6 @@ video {
   padding-right: 35px;
 }
 
-.px-\[8px\] {
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -1269,11 +1253,6 @@ video {
 .py-\[24px\] {
   padding-top: 24px;
   padding-bottom: 24px;
-}
-
-.py-\[2px\] {
-  padding-top: 2px;
-  padding-bottom: 2px;
 }
 
 .py-\[44px\] {
